adding reset.css.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Алезия лигал консалтинг</title>
     <meta charset="utf-8">
+    <link href="stylesheets/reset.css" rel="stylesheet">
     <link href="stylesheets/index.css" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   </head>
