--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
-<html>
-  
-  <head>
-    <title>Алезия лигал консалтинг</title>
-    <meta charset="utf-8">
-    <link href="stylesheets/reset.css" rel="stylesheet">
-    <link href="stylesheets/index.css" rel="stylesheet">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  </head>
-  
-  <body> 
-    <div class="all">
-      <div class="logo">
-        <img class="logo pic" src="assets/pics/ale_logo.svg">
+<head>
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="stylesheets/app.css">
+  <script src="javascripts/vendor.js"></script>
+  <script src="javascripts/app.js"></script>
+  <script>
+    require('initialize');
+    
+  </script>
+</head>
+<body>
+  <div class="first-screen">
+    <div class="container">
+      <div class="text">
+        <div class="first-line">оборудование класса</div>
+        <div class="second-line">premium</div>
+        <div class="third-line">для автомоек самообслуживания</div>
       </div>
-
-      <div class="content">
-        <ul>
-          <li>Комплексные юридические услуги</li>
-          <li>–</li>
-          <li>Стартап-консультирование</li>
-          <li>–</li>
-          <li>Разрешение споров</li>
-          <li>–</li>
-          <li>Абонентское сопровождение</li>
-          <li>–</li>
-          <li>Комплаенс</li>
-        </ul>
-
-        <div class="contacts">
-          <div class="e-mail"><a href="mailto:help@alesialegal.moscow">help@alesialegal.moscow</a></div>
-          <br/>
-          <div class="phone">+7 (499) 281-61-42</div>
-        </div>
-        
-        <img class="qr" src="assets/pics/alesialegal.moscow_QR.png">
+      <div class="arrow"></div>
+    </div>
+  </div>
+  <div class="second-screen">
+    <div class="container">
+      <div class="left">
+        <div class="first-block">Мы не только производим оборудование</div>
+        <div class="second-block">Мы создаем бизнес</div>
+        <div class="dash"></div>
+      </div>
+      <div class="right">
+        <p>Мы убеждены, что оборудование для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
+        <p>Высококлассная автомойка самообслуживания — это не то место, где можно за плату воспользоваться простым аппаратом высокого давления и пылесосом.</p>
       </div>
     </div>
-  </body>
-  
-</html>
+  </div>
+</body>
