--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   </div>
   <div class="second-screen">
     <div class="container">
-      <div class="left">
+      <div class="second-left">
         <div class="first-block">Мы не только производим оборудование</div>
         <div class="second-block">Мы создаем бизнес</div>
         <div class="dash"></div>
       </div>
-      <div class="right">
+      <div class="second-right">
         <p>Мы убеждены, что оборудование для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
         <p>Высококлассная автомойка самообслуживания — это не то место, где можно за плату воспользоваться простым аппаратом высокого давления и пылесосом.</p>
       </div>
