Страница 0.0.2 на gh-pages.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </script>
 </head>
 <body>
-  <div class="first-screen">
+  <div class="section start">
     <div class="container">
       <div class="text">
         <div class="first-line">оборудование класса</div>
@@ -20,16 +20,44 @@
       <div class="arrow"></div>
     </div>
   </div>
-  <div class="second-screen">
+  <div class="section business">
     <div class="container">
       <div class="second-left">
-        <div class="first-block">Мы не только производим оборудование</div>
+        <div class="first-block">Мы не только <br> производим оборудование</div>
         <div class="second-block">Мы создаем бизнес</div>
         <div class="dash"></div>
       </div>
       <div class="second-right">
-        <p>Мы убеждены, что оборудование для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
+        <p>Мы убеждены, что оборудование <br >для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
         <p>Высококлассная автомойка самообслуживания — это не то место, где можно за плату воспользоваться простым аппаратом высокого давления и пылесосом.</p>
+      </div>
+    </div>
+  </div>
+  <div class="section new_level">
+    <div class="container">
+      <div class="text-block">
+        <div class="block-1">Совершенно новый уровень <br> бизнеса автомоечного самообслуживания</div>
+        <div class="block-2">Цивилизованный, удобный и красивый. Мы производим премиальный продукт в своем классе, создаем комфорт и удобство клиенту. Клиенту, которому всегда будет приятно, неверроятно просто, быстро и недорого ухаживать зо своим автомобилем.</div>
+      </div><img src="../pics/section.new_level.cleaner.png" class="cleaner-pic">
+    </div>
+  </div>
+  <div class="section four_programs">
+    <div class="container">
+      <div class="center-cont">
+        <div class="block-left">
+          <div class="block-left-1">4</div>
+          <div class="block-left-2">
+            <div class="block-left-2-1">программы</div>
+            <div class="block-left-2-2">и ничего лишнего</div>
+          </div>
+        </div>
+        <div class="block-right">
+          <div class="block-right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования MagicClean CARWASH как абсолютно уникальное решение, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
+          <div class="block-right-2">
+            <p>Технология на наших мойках бесконтактная. Но мы сделали это по-особенному.</p>
+            <p>По-особенному — это означает очень удобно, красиво, быстро и экономно. А если экономно, то это означает то, что люди будут чаще пользоваться такой услугой, ведь автомобили пачкаются всегда.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
