--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
         <div class="third-line">для автомоек самообслуживания</div>
-      </div>
-      <div class="arrow"></div>
+      </div><a class="arrow"><img src="../pics/section.start.arrow.svg"></a>
     </div>
   </div>
   <div class="section business">
     <div class="container">
-      <div class="second-left">
-        <div class="first-block">Мы не только <br> производим оборудование</div>
-        <div class="second-block">Мы создаем бизнес</div>
-        <div class="dash"></div>
-      </div>
-      <div class="second-right">
-        <p>Мы убеждены, что оборудование <br >для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
-        <p>Высококлассная автомойка самообслуживания — это не то место, где можно за плату воспользоваться простым аппаратом высокого давления и пылесосом.</p>
+      <div class="text-block">
+        <div class="second-left">
+          <div class="first-block">Мы не только <br> производим оборудование</div>
+          <div class="second-block">Мы создаем бизнес</div>
+          <div class="dash"></div>
+        </div>
+        <div class="second-right">
+          <p>Мы убеждены, что оборудование <br >для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
+          <p>Высококлассная автомойка самообслуживания — это не то место, где можно за плату воспользоваться простым аппаратом высокого давления и пылесосом.</p>
+        </div>
       </div>
     </div>
   </div>
@@ -52,7 +53,7 @@
           </div>
         </div>
         <div class="block-right">
-          <div class="block-right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования MagicClean CARWASH как абсолютно уникальное решение, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
+          <div class="block-right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования <strong>MagicClean CARWASH как абсолютно уникальное решение</strong>, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
           <div class="block-right-2">
             <p>Технология на наших мойках бесконтактная. Но мы сделали это по-особенному.</p>
             <p>По-особенному — это означает очень удобно, красиво, быстро и экономно. А если экономно, то это означает то, что люди будут чаще пользоваться такой услугой, ведь автомобили пачкаются всегда.</p>
