--- a/index.html
+++ b/index.html
@@ -62,4 +62,20 @@
       </div>
     </div>
   </div>
+  <div class="section main_car_animation">
+    <div class="container">
+      <div class="text-block-program">
+        <p>Первая программа</p>
+      </div>
+      <div class="block-info-1">
+        <div class="info-1-1">
+          <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль</p>
+        </div>
+        <div class="info-1-1">
+          <div class="info-1-btn1">Активная пена</div>
+          <div class="info-1-btn2">Активный шампунь</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
