--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
         <div class="third-line">для автомоек самообслуживания</div>
-      </div><a class="arrow"><img src="../pics/section.start.arrow.svg"></a>
+      </div><a href="#start" class="arrow"><img src="../pics/section.start.arrow.svg"></a>
     </div>
   </div>
-  <div class="section business">
+  <div id="start" class="section business">
     <div class="container">
       <div class="text-block">
         <div class="second-left">
@@ -70,10 +70,8 @@
       <div class="block-info-1">
         <div class="info-1-1">
           <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль</p>
-        </div>
-        <div class="info-1-1">
-          <div class="info-1-btn1">Активная пена</div>
-          <div class="info-1-btn2">Активный шампунь</div>
+          <div class="info-1 button btn1">Активная пена</div>
+          <div class="info-1 button btn2">Активный шампунь</div>
         </div>
       </div>
     </div>
