--- a/index.html
+++ b/index.html
@@ -64,15 +64,22 @@
   </div>
   <div class="section main_car_animation">
     <div class="container">
-      <div class="text-block-program">
+      <div class="block-program">
         <p>Первая программа</p>
       </div>
-      <div class="block-info-1">
-        <div class="info-1-1">
+      <div class="block-top">
+        <div class="top-1">
           <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль</p>
-          <div class="info-1 button btn1">Активная пена</div>
-          <div class="info-1 button btn2">Активный шампунь</div>
+          <div class="button btn1">Активная пена</div>
+          <div class="button btn2">Активный шампунь</div>
         </div>
+      </div>
+      <div class="content">
+        <div class="cleaner"></div>
+        <div class="car"></div>
+      </div>
+      <div class="block-bottom">
+        <div class="text">Благодаря свое густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
       </div>
     </div>
   </div>
