Страница 0.0.5 - первый экран с анимацией.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="dash"></div>
         </div>
         <div class="second-right">
-          <p>Мы убеждены, что оборудование <br >для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях</p>
+          <p>Мы убеждены, что оборудование <br >для автомойки самообслуживания формирует бизнес в целом. Невозможно построить высококлассную автомойку самообслуживания, не уделив внимание самой услуге. Услуге во всех ее проявлениях.</p>
           <p>Высококлассная автомойка самообслуживания — это не то место, где можно за плату воспользоваться простым аппаратом высокого давления и пылесосом.</p>
         </div>
       </div>
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="text-block">
         <div class="block-1">Совершенно новый уровень <br> бизнеса автомоечного самообслуживания</div>
-        <div class="block-2">Цивилизованный, удобный и красивый. Мы производим премиальный продукт в своем классе, создаем комфорт и удобство клиенту. Клиенту, которому всегда будет приятно, неверроятно просто, быстро и недорого ухаживать зо своим автомобилем.</div>
+        <div class="block-2">Цивилизованный, удобный и красивый. Мы производим премиальный продукт в своем классе, создаем комфорт и удобство клиенту. Клиенту, которому всегда будет приятно, неверроятно просто, быстро и недорого ухаживать за своим автомобилем.</div>
       </div><img src="../pics/section.new_level.cleaner.png" class="cleaner-pic">
     </div>
   </div>
@@ -69,16 +69,18 @@
       </div>
       <div class="block-top">
         <div class="top-1">
-          <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль</p>
+          <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
           <div class="button btn1">Активная пена</div>
           <div class="button btn2">Активный шампунь</div>
         </div>
       </div>
+      <div class="caption">Мойка</div>
       <div class="content">
         <div class="cleaner"></div>
         <div class="car"></div>
       </div>
       <div class="block-bottom">
+        <div class="title">MagicActiveFoаm</div>
         <div class="text">Благодаря свое густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
       </div>
     </div>
