--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
   <div class="section four_programs">
     <div class="container">
       <div class="center-cont">
-        <div class="block-left">
-          <div class="block-left-1">4</div>
-          <div class="block-left-2">
-            <div class="block-left-2-1">программы</div>
-            <div class="block-left-2-2">и ничего лишнего</div>
+        <div class="block left">
+          <div class="left-1">4</div>
+          <div class="left-2">
+            <div class="left-2-1">программы</div>
+            <div class="left-2-2">и ничего лишнего</div>
           </div>
         </div>
-        <div class="block-right">
-          <div class="block-right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования <strong>MagicClean CARWASH как абсолютно уникальное решение</strong>, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
-          <div class="block-right-2">
+        <div class="block right">
+          <div class="right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования <strong>MagicClean CARWASH как абсолютно уникальное решение</strong>, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
+          <div class="right-2">
             <p>Технология на наших мойках бесконтактная. Но мы сделали это по-особенному.</p>
             <p>По-особенному — это означает очень удобно, красиво, быстро и экономно. А если экономно, то это означает то, что люди будут чаще пользоваться такой услугой, ведь автомобили пачкаются всегда.</p>
           </div>
@@ -64,9 +64,7 @@
   </div>
   <div class="section main_car_animation">
     <div class="container">
-      <div class="block-program">
-        <p>Первая программа</p>
-      </div>
+      <div class="block-program">Первая программа</div>
       <div class="block-top">
         <div class="top-1">
           <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
@@ -84,5 +82,29 @@
         <div class="text">Благодаря свое густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
       </div>
     </div>
+  </div>
+  <div class="section pause">
+    <div class="container">
+      <div class="center-cont">
+        <div class="block left">
+          <div class="left-1">
+            <p>Одним из преимуществ нашей технологии мойки является клавиша</p>
+          </div>
+          <div class="left-2">Стоп / пауза</div>
+        </div>
+        <div class="block right">
+          <div class="right-1">
+            <p>Она позволяет клиенту ожидать реакции «Активной пены» на загрязнения, не теряя своих денежных средств.</p>
+            <p>Также это удобно, если пользователь забыл вытащить из автомобиля коврики и решил это сделать в процессе мытья. Такая приятная возможность привлекает больше клиентов.</p>
+          </div>
+          <div class="right-2">
+            <p>Клавишей можно пользоваться как в сервисном режиме мойке, так и при аварийном отключении процесса мытья.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section pults">
+    <div class="container"></div>
   </div>
 </body>
