Страница 0.0.7 - до видео включ.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <p>Одним из преимуществ нашей технологии мойки является клавиша</p>
           </div>
           <div class="left-2">Стоп / пауза</div>
+          <div class="button"><img src="../pics/section.pause.btn.png"></div>
         </div>
         <div class="block right">
           <div class="right-1">
@@ -105,6 +106,79 @@
     </div>
   </div>
   <div class="section pults">
+    <div class="container">
+      <div class="block main">
+        <div class="main-1">Пульты <br> управления мойкой</div>
+        <div class="main-2">Наши панели управления обладают привлекательным внешним видом и разнообразием функциональных возможностей. Понятный интерфейс по достоинсту оценили все пользователи автомое MagicClean. Мы учли тот факт, что панели служат некой гранью между пользователем и всей системой оборудования, и уделили их созданию не мало времени.</div>
+      </div>
+      <div class="block parts">
+        <table class="parts">
+          <tr>
+            <td>
+              <div class="caption">LED-подсветка</div>
+              <p>Обладает высокой яркостью</p>
+            </td>
+            <td>
+              <div class="caption">Брендированная шапка</div>
+              <p>в цвет стиля фриза конструкции</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="caption">Интерактивные клавиши</div>
+              <p>С пыле- и влагозащитой</p>
+            </td>
+            <td>
+              <div class="caption">Кнопка «Стоп / Пауза»</div>
+              <p>для более удобного использования</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="caption">Настраиваемый дисплей</div>
+              <p>Отображение времени или денег</p>
+            </td>
+            <td>
+              <div class="caption">Вандалоустойчивый корпус</div>
+              <p>из нержавеющей стали</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="caption">Удобная система оплаты</div>
+              <p>Купюры, монеты, жетоны</p>
+            </td>
+            <td>
+              <div class="caption">Система подогрева</div>
+              <p>пультов управления</p>
+            </td>
+          </tr>
+        </table>
+        <div class="block cleaner"><img src="../pics/section.pults.cleaner.png"></div>
+      </div>
+    </div>
+  </div>
+  <div class="section slideshow">
+    <div class="container">
+      <div class="block title">Наши усовершенствованные технологии</div>
+      <div class="block info">
+        <div class="caption">Интеллектуальная система управления и контроля InVision</div>
+        <div class="text">Партисипативное планирование оправдывает пул лояльных изданий.</div><a class="link">Подробнее</a>
+      </div>
+    </div>
+  </div>
+  <div class="section video">
+    <div class="container">
+      <div class="video"><iframe width="917" height="516" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe></div>
+    </div>
+  </div>
+  <div class="section request">
+    <div class="container"></div>
+  </div>
+  <div class="section bottom_menu">
+    <div class="container"></div>
+  </div>
+  <div class="section footer">
     <div class="container"></div>
   </div>
 </body>
