--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 <body>
   <div class="section start">
     <div class="container">
+      <div class="logo"><img src="../pics/section.start.logo.png"></div>
+      <div class="menu">
+        <ul class="part">
+          <li><a href="#start">Автомойки</a></li>
+          <li><a href="#start">Конструкции</a></li>
+          <li><a href="#start">Аксессуары</a></li>
+          <li><a href="#start">Автоматы</a></li>
+          <li><a href="#start">Химия</a></li>
+          <li><a href="#start">Сервис</a></li>
+        </ul>
+        <ul class="part">
+          <li><a href="#start">Компания</a></li>
+          <li><a href="#start">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="lang"><a href="#start">EN</a></div>
       <div class="text">
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
@@ -173,12 +189,50 @@
     </div>
   </div>
   <div class="section request">
-    <div class="container"></div>
+    <div class="container">
+      <div class="block main">
+        <h1>Оборудование класса Premium</h1>
+        <p>Вы можете оставить заявку на оборудование MagicClean Carwash или связаться с нами другим удобным для вас способом</p>
+        <div class="button btn1">Заказать</div>
+        <div class="button btn2">Посмотреть контакты</div>
+      </div>
+      <div class="block menu">
+        <div class="menu item"><img src="../pics/section.request.circle.svg">
+          <p>Бизнес-стратегия</p>
+        </div>
+        <div class="menu item"><img src="../pics/section.request.circle.svg">
+          <p>Этап строительства</p>
+        </div>
+        <div class="menu item"><img src="../pics/section.request.circle.svg">
+          <p>Комплект поставки</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="section bottom_menu">
-    <div class="container"></div>
+    <div class="menu">
+      <div class="item">
+        <p>Аксессуары</p>
+      </div>
+      <div class="item">
+        <p>Конструкции</p>
+      </div>
+      <div class="item">
+        <p>Химия</p>
+      </div>
+    </div>
   </div>
   <div class="section footer">
-    <div class="container"></div>
+    <div class="element logo"><img src="../pics/section.footer.logo.png"></div>
+    <div class="element contact">
+      <div class="city">Ростов-на-Дону</div>
+      <div class="phone">+7 (863) 226 47 04</div>
+    </div>
+    <div class="element contact">
+      <div class="city">Москва</div>
+      <div class="phone">+7 (495) 317 12 91</div>
+    </div>
+    <div class="element btn catalog">Скачать каталог</div>
+    <div class="element social"><a href="http://facebook.com" class="item fb"><img src="../pics/section.footer.social.fb.svg"></a><a href="http://vk.com" class="item vk"><img src="../pics/section.footer.social.vk.svg"></a><a href="http://youtube.com" class="item yt"><img src="../pics/section.footer.social.yt.svg"></a></div>
   </div>
 </body>
