--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p>Также это удобно, если пользователь забыл вытащить из автомобиля коврики и решил это сделать в процессе мытья. Такая приятная возможность привлекает больше клиентов.</p>
           </div>
           <div class="right-2">
-            <p>Клавишей можно пользоваться как в сервисном режиме мойке, так и при аварийном отключении процесса мытья.</p>
+            <p>Клавишей можно пользоваться как в сервисном режиме мойки, так и при аварийном отключении процесса мытья.</p>
           </div>
         </div>
       </div>
@@ -121,55 +121,57 @@
   </div>
   <div class="section pults">
     <div class="container">
-      <div class="block main">
-        <div class="main-1">Пульты <br> управления мойкой</div>
-        <div class="main-2">Наши панели управления обладают привлекательным внешним видом и разнообразием функциональных возможностей. Понятный интерфейс по достоинсту оценили все пользователи автомое MagicClean. Мы учли тот факт, что панели служат некой гранью между пользователем и всей системой оборудования, и уделили их созданию не мало времени.</div>
+      <div class="blocks">
+        <div class="block main">
+          <div class="main-1">Пульты <br> управления мойкой</div>
+          <div class="main-2">Наши панели управления обладают привлекательным внешним видом и разнообразием функциональных возможностей. Понятный интерфейс по достоинсту оценили все пользователи автомоек MagicClean. Мы учли тот факт, что панели служат некой гранью между пользователем и всей системой оборудования, и уделили их созданию немало времени.</div>
+        </div>
+        <div class="block parts">
+          <table class="parts">
+            <tr>
+              <td>
+                <div class="caption">LED-подсветка</div>
+                <p>Обладает высокой яркостью</p>
+              </td>
+              <td>
+                <div class="caption">Брендированная шапка</div>
+                <p>в цвет стиля фриза конструкции</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="caption">Интерактивные клавиши</div>
+                <p>С пыле- и влагозащитой</p>
+              </td>
+              <td>
+                <div class="caption">Кнопка «Стоп / Пауза»</div>
+                <p>для более удобного использования</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="caption">Настраиваемый дисплей</div>
+                <p>Отображение времени или денег</p>
+              </td>
+              <td>
+                <div class="caption">Вандалоустойчивый корпус</div>
+                <p>из нержавеющей стали</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="caption">Удобная система оплаты</div>
+                <p>Купюры, монеты, жетоны</p>
+              </td>
+              <td>
+                <div class="caption">Система подогрева</div>
+                <p>пультов управления</p>
+              </td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="block parts">
-        <table class="parts">
-          <tr>
-            <td>
-              <div class="caption">LED-подсветка</div>
-              <p>Обладает высокой яркостью</p>
-            </td>
-            <td>
-              <div class="caption">Брендированная шапка</div>
-              <p>в цвет стиля фриза конструкции</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="caption">Интерактивные клавиши</div>
-              <p>С пыле- и влагозащитой</p>
-            </td>
-            <td>
-              <div class="caption">Кнопка «Стоп / Пауза»</div>
-              <p>для более удобного использования</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="caption">Настраиваемый дисплей</div>
-              <p>Отображение времени или денег</p>
-            </td>
-            <td>
-              <div class="caption">Вандалоустойчивый корпус</div>
-              <p>из нержавеющей стали</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="caption">Удобная система оплаты</div>
-              <p>Купюры, монеты, жетоны</p>
-            </td>
-            <td>
-              <div class="caption">Система подогрева</div>
-              <p>пультов управления</p>
-            </td>
-          </tr>
-        </table>
-        <div class="block cleaner"><img src="../pics/section.pults.cleaner.png"></div>
-      </div>
+      <div class="block cleaner"><img src="../pics/section.pults.cleaner.png"></div>
     </div>
   </div>
   <div class="section slideshow">
