--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </div>
     <div class="block cleaner"><img src="../pics/section.pults.cleaner.png"></div>
   </div>
-  <div class="section slideshow">
+  <div id="slideshow" class="section slideshow">
     <div class="container">
       <div class="block text">
         <div class="title">Наши усовершенствованные технологии</div>
@@ -183,7 +183,7 @@
           <div class="text">Партисипативное планирование оправдывает пул лояльных изданий.</div><a class="link">Подробнее</a>
         </div>
       </div>
-      <div class="block show">
+      <div id="slideshow_block" class="block show">
         <div class="circle-ext">
           <div class="circle-int">
             <div class="slider">
@@ -198,56 +198,58 @@
       </div>
     </div>
   </div>
-  <div class="section video">
-    <div class="container">
-      <div class="video"><iframe width="917" height="516" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe></div>
-    </div>
-  </div>
-  <div class="section request">
-    <div class="container">
-      <div class="block main">
-        <h1>Оборудование класса Premium</h1>
-        <p>Вы можете оставить заявку на оборудование MagicClean Carwash или связаться с нами другим удобным для вас способом</p>
-        <div class="button btn1">Заказать</div>
-        <div class="button btn2">Посмотреть контакты</div>
+  <div id="slideshow_all" class="scds">
+    <div id="trigger2" class="section video">
+      <div class="container">
+        <div class="video"><iframe width="917" height="516" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe></div>
       </div>
-      <div class="block menu">
-        <div class="menu item"><img src="../pics/section.request.circle.svg">
-          <p>Бизнес-стратегия</p>
+    </div>
+    <div class="section request">
+      <div class="container">
+        <div class="block main">
+          <h1>Оборудование класса Premium</h1>
+          <p>Вы можете оставить заявку на оборудование MagicClean Carwash или связаться с нами другим удобным для вас способом</p>
+          <div class="button btn1">Заказать</div>
+          <div class="button btn2">Посмотреть контакты</div>
         </div>
-        <div class="menu item"><img src="../pics/section.request.circle.svg">
-          <p>Этап строительства</p>
+        <div class="block menu">
+          <div class="menu item"><img src="../pics/section.request.circle.svg">
+            <p>Бизнес-стратегия</p>
+          </div>
+          <div class="menu item"><img src="../pics/section.request.circle.svg">
+            <p>Этап строительства</p>
+          </div>
+          <div class="menu item"><img src="../pics/section.request.circle.svg">
+            <p>Комплект поставки</p>
+          </div>
         </div>
-        <div class="menu item"><img src="../pics/section.request.circle.svg">
-          <p>Комплект поставки</p>
+      </div>
+    </div>
+    <div class="section bottom_menu">
+      <div class="menu">
+        <div class="item">
+          <p>Аксессуары</p>
+        </div>
+        <div class="item">
+          <p>Конструкции</p>
+        </div>
+        <div class="item">
+          <p>Химия</p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="section bottom_menu">
-    <div class="menu">
-      <div class="item">
-        <p>Аксессуары</p>
+    <div class="section footer">
+      <div class="element logo"><img src="../pics/section.footer.logo.png"></div>
+      <div class="element contact">
+        <div class="city">Ростов-на-Дону</div>
+        <div class="phone">+7 (863) 226 47 04</div>
       </div>
-      <div class="item">
-        <p>Конструкции</p>
+      <div class="element contact">
+        <div class="city">Москва</div>
+        <div class="phone">+7 (495) 317 12 91</div>
       </div>
-      <div class="item">
-        <p>Химия</p>
-      </div>
+      <div class="element btn catalog">Скачать каталог</div>
+      <div class="element social"><a href="http://facebook.com" class="item fb"><img src="../pics/section.footer.social.fb.svg"></a><a href="http://vk.com" class="item vk"><img src="../pics/section.footer.social.vk.svg"></a><a href="http://youtube.com" class="item yt"><img src="../pics/section.footer.social.yt.svg"></a></div>
     </div>
-  </div>
-  <div class="section footer">
-    <div class="element logo"><img src="../pics/section.footer.logo.png"></div>
-    <div class="element contact">
-      <div class="city">Ростов-на-Дону</div>
-      <div class="phone">+7 (863) 226 47 04</div>
-    </div>
-    <div class="element contact">
-      <div class="city">Москва</div>
-      <div class="phone">+7 (495) 317 12 91</div>
-    </div>
-    <div class="element btn catalog">Скачать каталог</div>
-    <div class="element social"><a href="http://facebook.com" class="item fb"><img src="../pics/section.footer.social.fb.svg"></a><a href="http://vk.com" class="item vk"><img src="../pics/section.footer.social.vk.svg"></a><a href="http://youtube.com" class="item yt"><img src="../pics/section.footer.social.yt.svg"></a></div>
   </div>
 </body>
