--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
   <script src="javascripts/app.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/plugins/debug.addIndicators.min.js"></script>
   <script>
     require('initialize');
     
@@ -32,7 +33,8 @@
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
         <div class="third-line">для автомоек самообслуживания</div>
-      </div><a href="#start" class="arrow"><img src="../pics/section.start.arrow.svg"></a>
+      </div>
+      <div class="arrow smoothScroll"><img src="../pics/section.start.arrow.svg"></div>
     </div>
   </div>
   <div id="start" class="section business">
@@ -175,8 +177,8 @@
     <div class="block cleaner"><img src="../pics/section.pults.cleaner.png"></div>
   </div>
   <div id="slideshow" class="section slideshow">
-    <div class="container">
-      <div class="block text">
+    <div id="show-cont" class="container">
+      <div id="show-text" class="block text">
         <div class="title">Наши усовершенствованные технологии</div>
         <div class="info">
           <div class="caption">Интеллектуальная система управления и контроля InVision</div>
