--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </div>
   </div>
-  <div class="section main_car_animation">
+  <div id="car-screen" class="section main_car_animation">
     <div class="container">
       <div class="block-program">Первая программа</div>
       <div class="block-top">
