Страница 0.3 - анимации!!! уууу!!

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
         <div class="third-line">для автомоек самообслуживания</div>
-      </div>
-      <div class="arrow smoothScroll"><img src="../pics/section.start.arrow.svg"></div>
+      </div><a href="#start" class="arrow smoothScroll"><img src="../pics/section.start.arrow.svg"></a>
     </div>
   </div>
   <div id="start" class="section business">
@@ -79,24 +78,55 @@
     </div>
   </div>
   <div id="car-screen" class="section main_car_animation">
+    <div id="car_caption1" class="caption caption1">Мойка</div>
+    <div id="car_caption2" class="caption caption2">Ополаскивание</div>
+    <div id="car_caption3" class="caption caption3">Полировка</div>
+    <div id="car_caption4" class="caption caption4">Ополаскивание
+      <div class="comment">Деминерализованной водой</div>
+    </div>
     <div class="container">
-      <div class="block-program">Первая программа</div>
-      <div class="block-top">
-        <div class="top-1">
-          <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
-          <div class="button btn1">Активная пена</div>
-          <div class="button btn2">Активный шампунь</div>
-        </div>
+      <div class="program program1">Первая программа</div>
+      <div class="program program2">Вторая программа</div>
+      <div class="program program3">Третья программа</div>
+      <div class="program program4">Четвертая программа</div>
+      <div class="block-top block-top-1">
+        <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
+        <div class="button btn1">Активная пена</div>
+        <div class="button btn2">Активный шампунь</div>
       </div>
-      <div class="caption">Мойка</div>
-      <div class="content">
-        <div class="cleaner"></div>
-        <div class="car"></div>
+      <div class="block-top block-top-2"><img src="../pics/section.main_car_animation.meter.png">
+        <p>Максимальное давление</p>
+        <p>150 бар</p>
       </div>
-      <div class="block-bottom">
+      <div class="block-top block-top-3">
+        <p>Клиент наносит горячий полимерный воск <strong>MagicWax</strong>. В умягченную воду, подогретую до 40° С, при помощи точной системы дозации DigitalBatching дозируется полиморный воск и подается на пистолет под давлением до 150 бар.</p>
+      </div>
+      <div class="block-top block-top-4">
+        <p>Используется вода, очищенная от солей и минералов. Очищение происходит в проццессе обратного осмоса, что позволяет получить воду практически без примесей.</p>
+        <p>И соответственно такая вода не будет оставлять подтеков и разводов на поверхности автомобиля.</p>
+      </div>
+      <div class="content-container">
+        <div class="content cleaner"></div>
+        <div class="content car-shadow"></div>
+        <div class="content car car-4"></div>
+        <div class="content car car-3"></div>
+        <div class="content car car-2"></div>
+        <div class="content car car-1"></div>
+      </div>
+      <div class="block-bottom block-bottom-1">
         <div class="title">MagicActiveFoаm</div>
         <div class="text">Благодаря свое густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
       </div>
+      <div class="block-bottom block-bottom-2">
+        <div class="text">В холодный период эксплуатации интеллектуальная система InVision автоматически переключает подачу воды на теплую, таким образом предвосхищая ожидание клиента.</div>
+      </div>
+      <div class="block-bottom block-bottom-3">
+        <div class="text">Лакокрасочной поверхности автомобиля придается дополнительный блеск, а капли воды стекают с кузова. Также при следующей мойке автомобиль гораздо легче отмыть от загрязнений.</div>
+      </div>
+      <div class="block-bottom block-bottom-4">
+        <div class="text">Для получения безупречного эффекта от мойки в целом, система <strong>DigitalBathing</strong> добавляет в деминерализованную воду немного осущающего растрова.</div>
+      </div>
+      <div class="block-bottom-left">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
     </div>
   </div>
   <div class="section pause">
@@ -177,30 +207,30 @@
     <div class="block cleaner"><img src="../pics/section.pults.cleaner.png"></div>
   </div>
   <div id="slideshow" class="section slideshow">
-    <div id="show-cont" class="container">
-      <div id="show-text" class="block text">
+    <div class="container">
+      <div class="block pinned">
         <div class="title">Наши усовершенствованные технологии</div>
         <div class="info">
           <div class="caption">Интеллектуальная система управления и контроля InVision</div>
           <div class="text">Партисипативное планирование оправдывает пул лояльных изданий.</div><a class="link">Подробнее</a>
         </div>
-      </div>
-      <div id="slideshow_block" class="block show">
-        <div class="circle-ext">
-          <div class="circle-int">
-            <div class="slider">
-              <div class="pic pic-1"></div>
-              <div class="pic pic-2"></div>
-              <div class="pic pic-3"></div>
-            </div>
+      </div><img src="../pics/section.slideshow.center.png" class="pinned">
+    </div>
+    <div class="block show">
+      <div class="circle-ext">
+        <div class="circle-int"><img src="../pics/section.slideshow.lens.svg" class="lens">
+          <div class="slider">
+            <div class="pic pic-1"></div>
+            <div class="pic pic-2"></div>
+            <div class="pic pic-3"></div>
           </div>
-          <div class="prev btn"></div>
-          <div class="next btn"></div>
         </div>
+        <div class="prev btn"></div>
+        <div class="next btn"></div>
       </div>
     </div>
   </div>
-  <div id="trigger2" class="section video">
+  <div id="after-show" class="section video">
     <div class="container">
       <div class="video"><iframe width="917" height="516" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe></div>
     </div>
