--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
       </div>
       <div class="content-container">
         <div class="content cleaner"></div>
+        <div class="content round round-1"></div>
+        <div class="content round round-2"></div>
+        <div class="content round round-3"></div>
         <div class="content car-shadow"></div>
         <div class="content car car-4"></div>
         <div class="content car car-3"></div>
