--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <meta name="viewport" content="width=device-width">
+  <!--meta(name="viewport" content="width=device-width, initial-scale=1.0")-->
+  <meta charset="utf-8">
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
   <script src="javascripts/app.js"></script>
@@ -61,18 +62,20 @@
   </div>
   <div class="section four_programs">
     <div class="container">
-      <div class="block left">
-        <div class="left left-1">4</div>
-        <div class="left left-2">
-          <div class="left-2-1">программы</div>
-          <div class="left-2-2">и ничего лишнего</div>
+      <div class="blocks">
+        <div class="block left">
+          <div class="left left-1">4</div>
+          <div class="left left-2">
+            <div class="left-2-1">программы</div>
+            <div class="left-2-2">и ничего лишнего</div>
+          </div>
         </div>
-      </div>
-      <div class="block right">
-        <div class="right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования <strong>MagicClean CARWASH как абсолютно уникальное решение</strong>, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
-        <div class="right-2">
-          <p>Технология на наших мойках бесконтактная. Но мы сделали это по-особенному.</p>
-          <p>По-особенному — это означает очень удобно, красиво, быстро и экономно. А если экономно, то это означает то, что люди будут чаще пользоваться такой услугой, ведь автомобили пачкаются всегда.</p>
+        <div class="block right">
+          <div class="right-1">С самого начала компанию MagicClean вдохновляло желания взять невероятно популярные технологии, жидкостную и пенную, и объединить их в рамках одного оборудования. Мы задумали, разработали и создали линейку оборудования <strong>MagicClean CARWASH как абсолютно уникальное решение</strong>, давая возможность инвестору охватить весь рынок и удовлетворить спрос всех клиентов.</div>
+          <div class="right-2">
+            <p>Технология на наших мойках бесконтактная. Но мы сделали это по-особенному.</p>
+            <p>По-особенному — это означает очень удобно, красиво, быстро и экономно. А если экономно, то это означает то, что люди будут чаще пользоваться такой услугой, ведь автомобили пачкаются всегда.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -132,7 +135,7 @@
       <div class="block-bottom-left">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
     </div>
   </div>
-  <div class="section pause">
+  <div id="car-after" class="section pause">
     <div class="container">
       <div class="center-cont">
         <div class="block left">
