Страница 0.4 - айпад работает в портретном режиме! ну, почти.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="program program4">Четвертая программа</div>
       <div class="block-top block-top-1">
         <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
-        <div class="button btn1">Активная пена</div>
+        <div class="button btn1 button-active">Активная пена</div>
         <div class="button btn2">Активный шампунь</div>
       </div>
       <div class="block-top block-top-2"><img src="../pics/section.main_car_animation.meter.png">
@@ -120,8 +120,14 @@
         <div class="content car car-1"></div>
       </div>
       <div class="block-bottom block-bottom-1">
-        <div class="title">MagicActiveFoаm</div>
-        <div class="text">Благодаря свое густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
+        <div class="block-bottom-var1">
+          <div class="title">MagicActiveFoаm</div>
+          <div class="text">Благодаря своей густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
+        </div>
+        <div class="block-bottom-var2">
+          <div class="title">MagicActiveShampoo</div>
+          <div class="text">А это офигенный продающий текст про шампунь.</div>
+        </div>
       </div>
       <div class="block-bottom block-bottom-2">
         <div class="text">В холодный период эксплуатации интеллектуальная система InVision автоматически переключает подачу воды на теплую, таким образом предвосхищая ожидание клиента.</div>
@@ -238,13 +244,15 @@
   </div>
   <div id="after-show" class="section video">
     <div class="container">
-      <div class="video"><iframe width="917" height="516" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe></div>
+      <div class="video">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
   <div class="section request">
     <div class="container">
       <div class="block main">
-        <h1>Оборудование класса Premium</h1>
+        <h2>Оборудование класса Premium</h2>
         <p>Вы можете оставить заявку на оборудование MagicClean Carwash или связаться с нами другим удобным для вас способом</p>
         <div class="button btn1">Заказать</div>
         <div class="button btn2">Посмотреть контакты</div>
